--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -99,6 +99,7 @@
 {% endblock %}
 {% block script %}
     $("#add-job").addClass("active");
+    $(".job-nav").addClass("active");
     $("#protocol-selector").change(function(){
         var selected=$(this).children('option:selected').val();
         if (selected){
