--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -100,6 +100,7 @@
     var before_software = "";
     var before_uid = "";
     $("#add-protocol").addClass("active");
+    $(".protocol-nav").addClass("active");
     $(document).ready(function(){
         var oTextbox = new AutoSuggestControl("parameter");
     });
