--- a/ui/templates/ui/foot.html
+++ b/ui/templates/ui/foot.html
@@ -1,4 +1,4 @@
-<footer><div class="container">
+<footer><div class="container-fluid">
     <ul class="list-inline">
         <li><a href="http://www.bioqueue.org" target="_blank">Homepage</a></li>
         <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
