--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -124,6 +124,7 @@
 </div>
 {% endblock %}
 {% block script %}
+    $(".protocol-nav").addClass("active");
     var before_software = "";
     $("#edit-job").addClass("active");
     var csrftoken = $.cookie('csrftoken');
