--- a/ui/templates/ui/manage_reference.html
+++ b/ui/templates/ui/manage_reference.html
@@ -50,7 +50,7 @@
 </div>
 {% endblock %}
 {% block script %}
-    $("#manage-reference").addClass("active");
+    $(".ref-nav").addClass("active");
     var csrftoken = $.cookie('csrftoken');
     $.ajaxSetup({
         beforeSend: function(xhr, settings){
