--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Li Yao">
     <link href="{% static "ui/css/bootstrap.css" %}" rel="stylesheet" media="screen">
-    <link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">
+    <!--<link href="{% static "ui/css/bootstrap-theme.min.css" %}" rel="stylesheet" media="screen">-->
     <link href="{% static "ui/css/site.css" %}" rel="stylesheet" media="screen">
     <link href="{% static "ui/css/font-awesome.min.css" %}" rel="stylesheet">
     <link href="{% static "ui/css/messenger.css" %}" rel="stylesheet">
@@ -20,44 +20,10 @@
     <![endif]-->
 </head>
 <body style="background-color: #efefef;">
-<div class="navbar">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-    	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-    		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-    	</a>
-    	<a class="brand" href="{% url 'ui:index' %}">
-    		<span class='brand-slogan'>BioQueue</span>
-    	</a>
-    	<div class="nav navbar-nav navbar-right" style="margin-top:3px;">
-    		{% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'accounts:logout' %}"><i class="icon-user"></i> Log out</a>
-            {% endif %}
-            {% if user.is_staff %}
-                <a class="btn btn-default" href="/admin"><i class="icon-wrench"></i> Admin</a>
-            {% endif %}
-		</div>
-	</div>
-  </div>
-</div>
+{% include 'ui/navigation.html' %}
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="col-xs-12 col-md-2">
-        <ul class="nav-list list-group">
-            <li class="list-group-item"><a href="{% url 'ui:index' %}"><i class="icon-home"></i> Dashboard</a></li>
-            <li class="list-group-item"><i class="icon-list"></i> Job</li>
-            <li class="list-group-item" id="add-job"><a href="{% url 'ui:add_job' %}">New Job</a></li>
-            <li class="list-group-item" id="query-job"><a href="{% url 'ui:query_job' %}">Job Status</a></li>
-            <li class="list-group-item"><i class="icon-pencil"></i> Protocol</li>
-            <li class="list-group-item" id="add-protocol"><a href="{% url 'ui:create_protocol' %}">New Protocol</a></li>
-            <li class="list-group-item" id="edit-protocol"><a href="{% url 'ui:query_protocol' %}">Edit Protocol</a></li>
-            <li class="list-group-item nav-header" id="manage-reference"><a href="{% url 'ui:manage_reference' %}"><i class="icon-book"></i> Reference</a></li>
-            <li class="list-group-item"><i class="icon-lock"></i> System</li>
-            <li class="list-group-item"><a href="{% url 'ui:settings' %}">Settings</a></li>
-            <li class="list-group-item"><a href="/admin/auth/user">Users</a></li>
-        </ul>
-    </div>
-    <div class="col-xs-12 col-md-10">
+    <div class="col-xs-12 col-md-12">
       {% block content %}{% endblock %}
     </div>
   </div>
