--- a/ui/templates/ui/single.html
+++ b/ui/templates/ui/single.html
@@ -17,23 +17,7 @@
     <![endif]-->
 </head>
 <body style="background-color: #efefef;">
-<div class="navbar">
-  <div class="navbar-inner">
-    <div class="container-fluid">
-    	<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-    		<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-    	</a>
-    	<a class="brand" href="{% url 'ui:index' %}">
-    		<span class='brand-slogan'>BioQueue</span>
-    	</a>
-    	<div class="nav navbar-nav navbar-right" style="margin-top:3px;">
-    		{% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'accounts:logout' %}"><i class="icon-user"></i> Log out</a>
-            {% endif %}
-		</div>
-	</div>
-  </div>
-</div>
+{% include 'ui/navigation.html' %}
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="col-xs-2"></div>
