--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -145,8 +145,8 @@
                             <p class="help-block">Maximum amount of physical memory used by the job. e.g. 32GB, 64MB</p>
                         </div>
                         <div class="form-group">
-                            <label class="control-label" for="cluster-mem">Virtual Memory:</label>
-                            <input type="text" class="form-control cluster-control" id="cluster-mem" name="job_vrt" value="{{ job_vrt }}" disabled="disabled"/>
+                            <label class="control-label" for="cluster-vrt-mem">Virtual Memory:</label>
+                            <input type="text" class="form-control cluster-control" id="cluster-vrt-mem" name="job_vrt" value="{{ job_vrt }}" disabled="disabled"/>
                             <p class="help-block">Maximum amount of virtual memory used by the job. e.g. 32GB, 64MB</p>
                         </div>
                         <div class="form-group">
