--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -1,6 +1,9 @@
 {% extends 'ui/base.html' %}
 {% block title %}Create Protocol | BioQueue{% endblock %}
 {% block content %}
+<div class="page-header">
+    <h1>New Protocol</h1>
+</div>
 <div class="row-fluid">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
