--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -28,7 +28,7 @@
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </a>
-        <a class="brand" href="{% url 'ui:index' %}">
+        <a class="brand" style="margin-top: 2px;" href="{% url 'ui:index' %}">
             <span class='brand-slogan'>{% block branding %}{% endblock %}</span>
         </a>
         <ul class="nav navbar-nav navbar-right">
