--- a/ui/static/ui/css/site.css
+++ b/ui/static/ui/css/site.css
@@ -56,7 +56,7 @@ body {
 	text-decoration: none;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-.nav .open > a, .nav .open > a:hover, .nav .open > a:focus, .navbar > a:focus{
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus, .navbar > a:focus, .nav > li > a:focus{
 	background-color: transparent;
 }
 #top-nav .nav li:hover, #top-nav .nav .open > a:focus{
