--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -5,7 +5,7 @@
     <div class="page-header">
         <h1>Protocol List</h1>
     </div>
-    <table class="table table-bordered">
+    <table class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>ID</th>
