--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -15,7 +15,7 @@
         <script src="{% static "ui/js/html5shiv.min.js" %}"></script>
     <![endif]-->
 </head>
-<body>
+<body style="padding-top: 40px;">
 {% include 'ui/navigation.html' %}
 <div style="margin: 20px auto; width: 90%;">
 	<ul class="breadcrumb">
