--- a/ui/templates/ui/single.html
+++ b/ui/templates/ui/single.html
@@ -16,7 +16,7 @@
         <script src="{% static "ui/js/html5shiv.min.js" %}"></script>
     <![endif]-->
 </head>
-<body style="background-color: #efefef;">
+<body style="background-color: #efefef; padding-top: 40px;">
 {% include 'ui/navigation.html' %}
 <div class="container-fluid">
     <div class="row-fluid">
