--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -169,6 +169,7 @@
         refT = window.setInterval(refreshJob, 30000);
     });
     $("#query-job").addClass("active");
+    $(".job-nav").addClass("active");
     var csrftoken = $.cookie('csrftoken');
     $.ajaxSetup({
         beforeSend: function(xhr, settings){
