--- a/ui/templates/ui/navigation.html
+++ b/ui/templates/ui/navigation.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-bioqueue navbar-static-top" id="top-nav">
+<div class="navbar navbar-bioqueue navbar-fixed-top" id="top-nav">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
