Tips for running jobs

--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -43,6 +43,9 @@ $(document).ajaxStart(function(){
 	$("button:submit").attr("disabled", false);
 });
 {% block script %}{% endblock %}
+$.getJSON("{% url 'ui:query_running_jobs' %}", function(json){
+    $("#top-running-jobs").html(json.info);
+});
 </script>
 </body>
 </html>
