--- a/ui/templates/ui/add_step.html
+++ b/ui/templates/ui/add_step.html
@@ -7,6 +7,10 @@
         <label for="parameter">Parameters*:</label>
         <input type="text" class="form-control" id="parameter" name="parameter" />
     </div>
+    <div class="form-group">
+        <label for="parameter">Insert to: (0 means the first step, -1 means the last step)</label>
+        <input type="number" class="form-control" id="insert_to" name="insert_to" value="-1"/>
+    </div>
     <hr />
     <input type="hidden" name="parent" id="step-parent" value="{{ parent }}">
     <input type="hidden" name="csrfmiddlewaretoken" id="csrf">
