--- a/ui/templates/ui/add_step.html
+++ b/ui/templates/ui/add_step.html
@@ -11,6 +11,14 @@
         <label for="parameter">Insert to: (0 means the first step, -1 means the last step)</label>
         <input type="number" class="form-control" id="insert_to" name="insert_to" value="-1"/>
     </div>
+    <div class="form-group">
+        <label for="force_local">Force BioQueue to run the step locally instead of submitting to clusters.</label>
+        <select name="force_local" id="force_local">
+            <option value="0">No</option>
+            <option value="1">Yes</option>
+        </select>
+        <span class="help-block">It will work only in cluster mode. When you run BioQueue in clusters, the computing nodes may not connect to the internet, so software, like wget, fastq-dump may not work. Under this circumstance, you can force BioQueue to run this step in local.</span>
+    </div>
     <hr />
     <input type="hidden" name="parent" id="step-parent" value="{{ parent }}">
     <input type="hidden" name="csrfmiddlewaretoken" id="csrf">
