--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -69,6 +69,14 @@
                         <label for="parameter">Insert to: (0 means the first step, -1 means the last step)</label>
                         <input type="number" class="form-control" id="insert_to" name="insert_to" value="-1"/>
                     </div>
+                    <div class="form-group">
+                        <label for="force_local">Force BioQueue to run the step locally instead of submitting it to clusters? <a><i id="force_local_hit" class="icon-question-sign" data-toggle="popover" title="" data-content="When you run BioQueue in clusters, the computing nodes may not be connected to the internet, so software, like wget, may not work. Under this circumstance, you can force BioQueue to run this step in local machine."></i></a></label>
+                        <select name="force_local" id="force_local" class="form-control">
+                            <option value="0">No</option>
+                            <option value="1">Yes</option>
+                        </select>
+                        <span class="help-block">It will work only in cluster mode.</span>
+                    </div>
                     <hr />
                     <input type="hidden" name="parent" id="step-parent">
                     <div class="form-group" style="text-align: center;">
@@ -131,6 +139,7 @@
     $(".protocol-nav").addClass("active");
     var before_software = "";
     $("#edit-job").addClass("active");
+    $("#force_local_hit").popover();
     var csrftoken = $.cookie('csrftoken');
     $.ajaxSetup({
         beforeSend: function(xhr, settings){
