--- a/ui/templates/ui/navigation.html
+++ b/ui/templates/ui/navigation.html
@@ -17,6 +17,7 @@
                     <ul class="dropdown-menu">
                         <li id="install-tool"><a href="{% url 'ui:install_tool' %}">Install Tool</a></li>
                         <li id="import-ref"><a href="{% url 'ui:install_reference' %}">Import Reference</a></li>
+                        <li id="fetch-data"><a href="{% url 'ui:fetch_data' %}">Fetch Data</a></li>
                     </ul>
                 </li>
                 <li class="dropdown job-nav">
