On fly (file specific support)

--- a/ui/static/ui/css/site.css
+++ b/ui/static/ui/css/site.css
@@ -852,3 +852,10 @@ span.icon-bar {
 .page-header {
     margin: 0;
 }
+.op-label {
+	cursor: pointer;
+}
+.op-more-container{
+	text-transform: capitalize;
+    color: #51A351;
+}
