--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -65,7 +65,7 @@
                         <li><span class="label label-info show-folder" onclick="showFolder({{ job.id }});" data-toggle="tooltip" data-placement="top" title="{{ job.result }}"><i class="icon-folder-open"></i> Show output files</span></li>
                     </ul></p>
                     </div>
-                    <hr>
+                    <hr style="margin-bottom: 5px; margin-top: 5px;">
                     <div class="text-center operation-buttons">
                         {% if job.status == -1 %}
                             <div class="btn-group" role="group" aria-label="...">
