--- a/ui/templates/ui/navigation.html
+++ b/ui/templates/ui/navigation.html
@@ -18,6 +18,7 @@
                         <li id="install-tool"><a href="{% url 'ui:install_tool' %}">Install Tool</a></li>
                         <li id="import-ref"><a href="{% url 'ui:install_reference' %}">Import Reference</a></li>
                         <li id="fetch-data"><a href="{% url 'ui:fetch_data' %}">Fetch Data</a></li>
+                        <li id="virtual-environment"><a href="{% url 'ui:virtual_env' %}">Virtual Environment</a></li>
                     </ul>
                 </li>
                 <li class="dropdown job-nav">
