--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -81,6 +81,15 @@
                                     <label class="control-label" for="name">Parameter</label>
                                     <input type="text" class="form-control input-xlarge parameter-ac" id="parameter" name="parameter" required />
                                 </div>
+                                <div class="form-group">
+                                    <label for="env-selector">Virtual environment</label>
+                                    <select class="form-control input-xlarge" id="env-selector" name="env">
+                                        <option value="">Specify a virtual environment</option>
+                                        {% for env in user_envs %}
+                                        <option value="{{ env.id }}">{{ env.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
                                 <hr>
                             </div>
                         </div>
